<resources>
    <string name="app_name">ThinMP</string>

    <string name="library">Library</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="favorite_artists">Favorite Artists</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="playlists">Playlists</string>
    <string name="playlist">Playlist</string>
    <string name="recently_added">Recently Added</string>
    <string name="shortcut">Shortcut</string>

    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_favorite_artist">お気に入りに追加</string>
    <string name="del_favorite_artist">お気に入りから削除</string>
    <string name="add_favorite_song">お気に入りに追加</string>
    <string name="del_favorite_song">お気に入りから削除</string>
    <string name="add_playlist">プレイリストに追加</string>
    <string name="create_playlist">プレイリストを作成</string>
    <string name="create_playlist_label">プレイリスト名を入力</string>
    <string name="add_shortcut">Shortcutに追加</string>
    <string name="remove_shortcut">Shortcutから削除</string>

    <string name="recently_added_count">表示件数</string>

    <string name="album_not_found">アルバムが見つかりませんでした</string>
    <string name="artist_not_found">アーティストが見つかりませんでした</string>
    <string name="playlist_not_found">プレイリストが見つかりませんでした</string>

    <string-array name="recently_added_count_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

</resources>
