<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/add_shortcut"
        android:orderInCategory="300"
        android:title="@string/add_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_shortcut"
        android:orderInCategory="400"
        android:title="@string/remove_shortcut"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_favorite"
        android:orderInCategory="300"
        android:title="@string/add_favorite_artist"
        app:showAsAction="never" />

    <item
        android:id="@+id/del_favorite"
        android:orderInCategory="300"
        android:title="@string/del_favorite_artist"
        app:showAsAction="never" />
</menu>